--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ header {
 
 aside {
   padding: 20px;
-  padding-left: 5px;
+  padding-left: 20px;
   background: #ebebeb;
   color: #777;
   text-align: center;
@@ -56,7 +56,7 @@ aside {
   height: 300px;
   float: left;
   line-height: 60px;
-  margin: 15px 221px 20px 15px;
+  margin: 15px auto;
   overflow: auto;
 }
 
